src/ui/snapshots/terminal_rpg__ui__tests__enemy_showcase_unicode.snap
---
source: src/ui/mod.rs
expression: "rendered_enemy_showcase(DisplayProfile::default())"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Status ────────────────┐
│                                                    ││GRAVE KNIGHT            │
│                                █████               ││                        │
│                             ··········             ││HP ██████████ 32/32     │
│                            █··········█            ││MP ██████████ 10/10     │
│                            ╬···········            ││Armor 2                 │
│                            █··········█            ││1 Cleave M3 Ready       │
│                          sGC·····@······█          ││2 Grave Bolt M4 Ready   │
│                            █··········█            ││3 Empty  4 Empty        │
│                            █··········█            ││5 Empty  6 Empty        │
│                            █··········             ││7 Empty  8 Empty        │
│                                █████               ││9 Empty  0 Empty        │
│                                                    ││I1 Empty  I2 Empty      │
│                                                    ││I3 Empty  I4 Empty      │
│                                                    ││T0  Seed 54347          │
│                                                    ││Foes 3  Threat  !1 *1 on│
│                                                    ││@                       │
│                                                    ││                        │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│Ghoul 2 marks a lunge.                                                        │
│Cultist 3 marks a hex.                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
Move qwe/asd/zxc | 1-0 Skills | g:Get u:Use i:Inspect ?:Help Q:Quit
