src/ui/snapshots/terminal_rpg__ui__tests__exploration_small_ascii.snap
---
source: src/ui/mod.rs
expression: "rendered_game_at(60, 20, ascii, RunStatus::Active, false)"
---
+ The Ossuary -------------------------------------++ Statu+
|                                                  ||GRAVE |
|                              #####               ||KNIGHT|
|                           ..........             ||      |
|                          #..........#            ||HP    |
|                          +...........            ||[#####|
|                          #..........#            ||#####]|
|                        ........@......#          ||32/32 |
|                          #..........#            ||MP    |
|                          #..........#            ||[#####|
|                          #..........             ||#####]|
|                              #####               ||10/10 |
|                                                  ||Armor |
|                                                  ||2     |
|                                                  ||1     |
|                                                  ||Cleave|
+--------------------------------------------------++------+
+ Events --------------------------------------------------+
+----------------------------------------------------------+
Move qwe/asd/zxc | 1-0 Skills | g:Get u:Use i:Inspect ?:Help
