src/ui/snapshots/terminal_rpg__ui__tests__exploration_victory_unicode.snap
---
source: src/ui/mod.rs
expression: "rendered_game(DisplayProfile::default(), RunStatus::Victory)"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Status ────────────────┐
│                                                    ││GRAVE KNIGHT            │
│                                ▓▓▓▓▓               ││                        │
│                             ··········             ││HP ██████████ 32/32     │
│                            ▓··········▓            ││MP ██████████ 10/10     │
│                            ╬···········            ││Armor 2                 │
│                            ▓··········▓            ││1 Cleave M3 Ready       │
│                          ········@······▓          ││2 Grave Bolt M4 Ready   │
│                 ┌ Victory ─────────────────────────────────┐  4 Empty        │
│                 │YOU ESCAPED THE OSSUARY                   │  6 Empty        │
│                 │                                          │  8 Empty        │
│                 │The Grave Knight returns to the dying     │  0 Empty        │
│                 │light.                                    │y  I2 Empty      │
│                 │                                          │y  I4 Empty      │
│                 │Press r for another descent or Q to quit. │d 54347          │
│                 └──────────────────────────────────────────┘ Threat  None    │
│                                                    ││                        │
│                                                    ││                        │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│The crypt waits in silence.                                                   │
│You descend into the ossuary.                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
Move qwe/asd/zxc | 1-0 Skills | g:Get u:Use i:Inspect ?:Help Q:Quit
